[package]
name = "cog-rust"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
keywords = ["cog", "machine-learning", "rust"]
categories = ["science", "command-line-utilities"]
repository = "https://github.com/m1guelpf/cog-rust"
description = "Rust containers for machine learning"
authors = ["Miguel Piedrafita <soy@miguelpiedrafita.com>"]

[dependencies]
axum = "0.6.18"
chrono = "0.4.26"
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
