[package]
name = "cargo-cog"
description = "A cargo subcommand to build, run and publish machine learning containers"
readme = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
toml = "0.7.4"
dirs = "5.0.1"
serde = "1.0.164"
anyhow = "1.0.71"
base64 = "0.21.2"
bollard = "0.14.0"
map-macro = "0.2.6"
cargo_toml = "0.15.3"
serde_json = "1.0.96"
webbrowser = "0.8.10"
clap = { version = "4.3.3", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json"] }
