[package]
name = "cargo-cog"
description = "A cargo subcommand to build, run and publish machine learning containers"
readme = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
toml = "0.7.4"
dirs = "5.0.1"
indoc = "2.0.1"
serde = "1.0.164"
anyhow = "1.0.71"
base64 = "0.21.2"
map-macro = "0.2.6"
schemars = "0.8.12"
thiserror = "1.0.40"
cargo_toml = "0.15.3"
serde_json = "1.0.96"
webbrowser = "0.8.10"
cog-core = { path = "../core" }
clap = { version = "4.3.3", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json"] }
tree_magic_mini = { version = "3.0.3", features = ["with-gpl-data"] }
