[package]
name = "cargo-cog"
version = "1.0.4"
description = "A cargo subcommand to build, run and publish machine learning containers"
readme = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
dirs = "5.0.1"
indoc = "2.0.1"
serde = "1.0.164"
anyhow = "1.0.71"
base64 = "0.21.2"
map-macro = "0.2.6"
schemars = "0.8.12"
thiserror = "1.0.40"
mime_guess = "2.0.4"
serde_json = "1.0.96"
webbrowser = "0.8.10"
cargo_metadata = "0.15.4"
cog-core = { path = "../core", version = "0.1.0" }
clap = { version = "4.3.3", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json"] }
dataurl = { version = "0.1.2", default-features = false }
tree_magic_mini = { version = "3.0.3", features = ["with-gpl-data"] }
