[package]
name = "cog-core"
version = "0.2.0"
description = "Core types and traits for rust-cog, a Rust toolkit for machine learning."
readme = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = "1.0.71"
serde = "1.0.164"
thiserror = "1.0.40"
serde_json = "1.0.96"
url = { version = "2.4.0", features = ["serde"] }
tokio = { version = "1.31.0", features = ["rt"] }
chrono = { version = "0.4.26", features = ["serde"] }
schemars = { version = "0.8.12", features = ["url", "chrono"] }
