[package]
name = "cog-rust"
description = "Rust containers for machine learning"
readme = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
axum = "0.6.18"
anyhow = "1.0.71"
flume = "0.10.14"
serde = "1.0.163"
tracing = "0.1.37"
indexmap = "1.9.3"
titlecase = "2.2.1"
map-macro = "0.2.6"
thiserror = "1.0.40"
atomic_enum = "0.2.0"
serde_json = "1.0.96"
async-trait = "0.1.68"
url = { version = "2.4.0", features = ["serde"] }
aide = { version = "0.11.0", features = ["axum"] }
tokio = { version = "1.28.2", features = ["full"] }
chrono = { version = "0.4.26", features = ["serde"] }
axum-jsonschema = { version = "0.6.0", features = ["aide"] }
jsonschema = { version = "0.17.0", default-features = false }
schemars = { version = "0.8.12", features = ["chrono", "url"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
