[package]
name = "cog-rust"
description = "Rust containers for machine learning"
readme = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = "1.0.71"
flume = "0.10.14"
serde = "1.0.163"
tracing = "0.1.37"
indexmap = "1.9.3"
titlecase = "2.2.1"
map-macro = "0.2.6"
itertools = "0.10.5"
thiserror = "1.0.40"
lazy_static = "1.4.0"
atomic_enum = "0.2.0"
serde_json = "1.0.96"
async-trait = "0.1.68"
percent-encoding = "2.3.0"
url = { version = "2.4.0", features = ["serde"] }
axum = { version = "0.6.18", features = ["headers"] }
tokio = { version = "1.28.2", features = ["full"] }
chrono = { version = "0.4.26", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["json"] }
axum-jsonschema = { version = "0.6.0", features = ["aide"] }
jsonschema = { version = "0.17.0", default-features = false }
schemars = { version = "0.8.12", features = ["chrono", "url"] }
aide = { version = "0.11.0", features = ["axum", "axum-headers"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
