[package]
name = "cog-stable-diffusion"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["Miguel Piedrafita <soy@miguelpiedrafita.com>"]

[package.metadata.cog]
gpu = true
image = "stable-diffusion-rs"

[dependencies]
serde = "1.0.163"
anyhow = "1.0.71"
schemars = "0.8.12"
diffusers = "0.3.1"
async-trait = "0.1.68"
cog-rust = { path = "../../lib" }
tokio = { version = "1.28.2", features = ["full"] }
tch = { version = "0.13.0", features = ["download-libtorch"] }
